# uncollapsed

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  docs.yml  publish.yml
docs/: api.md  benchmarks.md  index.md  theory.md  usage.md
examples/: make_training_gif.py  train_xor.py  zero_taxonomy.py
src/uncollapsed/: __init__.py  algebra.py  bench.py  cli.py  data.py  faultbench.py  field.py  head.py  net.py  realbench.py  viz.py
tests/: test_algebra.py  test_collapse.py  test_faultbench.py  test_field.py  test_head.py  test_net.py  test_realbench.py
