[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "uncollapsed"
version = "0.4.0"
description = "Computation that keeps presence and absence separate and collapses only at the edge — with a first-class 'hold'."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Jon Finstad" }]
keywords = [
    "ternary", "balanced-ternary", "three-valued-logic", "subjective-logic",
    "evidence-theory", "uncertainty", "abstention", "neural-network",
    "selective-prediction", "ood-detection", "byzantine-fault-tolerance",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = ["numpy>=1.23"]

[project.optional-dependencies]
viz = ["matplotlib>=3.6"]
bench = ["scikit-learn>=1.3"]
dev = ["pytest>=7.0", "ruff>=0.4", "matplotlib>=3.6", "pillow>=9.0", "scikit-learn>=1.3"]
docs = ["mkdocs-material>=9.5", "mkdocstrings[python]>=0.25"]

[project.urls]
Homepage = "https://github.com/jfinst1/uncollapsed"
Repository = "https://github.com/jfinst1/uncollapsed"
Issues = "https://github.com/jfinst1/uncollapsed/issues"

[project.scripts]
uncollapsed = "uncollapsed.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
uncollapsed = ["py.typed"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E741"]  # ambiguous variable names (l, I) are fine in math code

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
